<?xml version="1.0"?>
<package format="3">
  <name>ros2_subscriber_service</name>
  <version>0.0.0</version>
  <description>ROS 2 package for subscribing and service request</description>
  <maintainer email="145927299+Vai-Man@users.noreply.github.com">Manihar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
